--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,6 +1,124 @@
-#review {
-  width:525px;
+#header {
+    margin: 0;
+    padding: 0;
+
+    height: 139px;
+    background-color: #202645;
+  }
+#header-wrap, #wrap{
+  margin: 0 auto;
+  padding: 0;
+  width: 790px;
 }
+
+/*//////////////*/
+
+#reviews {
+  position:relative;
+  width:525px;
+  margin:0 auto;
+
+}
+
+#review {
+vertical-align:top;
+display: block;
+  height:208px;
+  
+}
+
+#rightside {
+    display: inline-block;
+    vertical-align:top;
+}
+
+#poster {
+display: inline;
+vertical-align:top;
+width: 150px;
+}
+
+#title {
+  vertical-align:top;
+  display: block;
+
+margin-left:5px;
+  font-size: 13pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #3E4655;
+    font-variant: small-caps;
+}
+
+#reviewtext {
+  margin-left:5px;
+  vertical-align:top;
+  display: inline;
+    font-size: 13pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #3E4655;
+}
+
+#score {
+position:absolute;
+    top:0px;
+    left:260px;
+}
+
+
+
+/*//////////////*/
+a {
+  color:white
+}
+
+    .auto-style-title {
+    text-align: center;
+    font-family: "Gill Sans";
+    font-size: 40pt;
+    color: #FFFFFF;
+  }
+  
+
+      .auto-style-content {
+    font-size: 13pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #3E4655;
+    text-align: center;
+  }
+  
+    .auto-style-filmtitle {
+  font-size: 13pt;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3E4655;
+  font-variant: small-caps;
+}
+
+
+      .auto-style-sortby {
+    font-size: 11pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FFFFFF;
+    margin-top: 0;
+  }
+    .auto-style1 {
+    font-size: 11pt;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    color: #FFFFFF;
+    text-align: right;
+  }
+
+
+      .auto-style-o {
+    color: #202645;
+  }
+  
+  .alignleft {
+  float: left;
+}
+.alignright {
+  float: right;
+}
+
 
 .col-margin-bottom-1 {
   margin-bottom: 1em;
