small css fix with userreviews

--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -20,6 +20,13 @@
 
 }
 
+#user-reviews {
+  position:relative;
+  width:525px;
+  margin:0 auto;
+
+}
+
 #review {
 vertical-align:top;
 display: block;
