--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -63,6 +63,8 @@ display: block;
 #rightside {
     display: inline-block;
     vertical-align:top;
+    width:367px;
+    padding-left:8px;
 }
 
 #poster {
@@ -75,7 +77,7 @@ width: 150px;
   vertical-align:top;
   display: block;
 
-margin-left:5px;
+
   font-size: 13pt;
     font-family: Arial, Helvetica, sans-serif;
     color: #3E4655;
@@ -83,7 +85,7 @@ margin-left:5px;
 }
 
 #reviewtext {
-  margin-left:5px;
+
   vertical-align:top;
   display: inline;
     font-size: 13pt;
@@ -159,6 +161,7 @@ a {
 
 a {
   cursor: pointer;
+  color: white;
 }
 
 .navbar.main {
