--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,3 +1,21 @@
+#header-left-side {
+  width:40%;
+  display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+  color: #FFFFFF;
+      font-size: 11pt;
+      vertical-align: top;
+}
+
+#header-center {
+  width:20%;
+  display: inline-block;
+  text-align: center;
+  font-size: 40pt;
+    color: #FFFFFF;
+        font-family: Arial, Helvetica, sans-serif;
+}
+
 #header {
     margin: 0;
     padding: 0;
@@ -10,6 +28,8 @@
   padding: 0;
   width: 790px;
 }
+
+
 
 /*//////////////*/
 
