--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,19 +1,22 @@
 #header-left-side {
-  width:40%;
+  width:21%;
   display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
   color: #FFFFFF;
       font-size: 11pt;
       vertical-align: top;
+      line-height: 1;
+      margin:5px;
 }
 
 #header-center {
-  width:20%;
+  width:58%;
   display: inline-block;
   text-align: center;
   font-size: 40pt;
     color: #FFFFFF;
         font-family: Arial, Helvetica, sans-serif;
+        line-height: 1;
 }
 
 #header {
@@ -304,6 +307,11 @@ a {
 
 #product-details-page h1 {
   color: #5f6d7f;
+}
+
+body {
+      display: block;
+    margin: 8px;
 }
 
 #product-details-page h2.product-name {
