--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -9,7 +9,12 @@
       margin:5px;
 }
 
-#header-center {
+#header-left-side  a {
+  color: #FFFFFF;
+  text-decoration: underline;
+}
+
+#header-center a {
   width:58%;
   display: inline-block;
   text-align: center;
@@ -17,6 +22,9 @@
     color: #FFFFFF;
         font-family: Arial, Helvetica, sans-serif;
         line-height: 1;
+        color:white;
+        text-decoration: none;
+
 }
 
 #header {
