--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -69,7 +69,8 @@
 #reviews {
   position:relative;
   width:525px;
-  margin:0 auto;
+  margin: 0 auto;
+
   
 }
 
@@ -94,8 +95,12 @@
 #review {
 vertical-align:top;
 display: block;
-  height:208px;
+  height:240px;
   
+}
+
+#posterimage {
+
 }
 
 #rightside {
@@ -130,6 +135,13 @@ width: 150px;
     font-family: Arial, Helvetica, sans-serif;
     color: #3E4655;
 }
+
+#reviewtext a {
+
+
+    color: #3E4655;
+}
+
 
 #score {
 position:absolute;
