--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -27,6 +27,20 @@
 
 }
 
+#footer {
+    text-align: center;
+  }
+
+  #footerspan a {
+    display: inline-block;
+    position: relative;    
+    font-size: 13pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #3E4655;
+  }
+
+
+
 #header {
     margin: 0;
     padding: 0;
@@ -121,7 +135,7 @@ width: 150px;
   display: block;
 
 
-  font-size: 13pt;
+  font-size: 15pt;
     font-family: Arial, Helvetica, sans-serif;
     color: #3E4655;
     font-variant: small-caps;
